--- a/index.html
+++ b/index.html
@@ -3,28 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Union Calendar</title>
+    <title>Teamsters Local 2024 Calendar</title>
     <style>
+        /* Reset and Body Styling */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
-            background-color: #f9f9f9;
+            justify-content: center;
+            min-height: 100vh;
         }
+
+        /* Title Styling */
+        header {
+            background-color: #003366;
+            color: white;
+            width: 100%;
+            padding: 15px 0;
+            text-align: center;
+            font-size: 1.5em;
+            font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Calendar Container */
+        .calendar-container {
+            width: 100%;
+            max-width: 800px; /* For larger screens */
+            height: 90vh;
+            padding: 10px;
+        }
+
         iframe {
+            width: 100%;
+            height: 100%;
             border: solid 1px #777;
+        }
+
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            header {
+                font-size: 1.2em;
+            }
         }
     </style>
 </head>
 <body>
-    <iframe 
-        src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688" 
-        style="width: 90%; height: 90%;" 
-        frameborder="0" 
-        scrolling="no">
-    </iframe>
+    <header>Teamsters Local 2024 Calendar</header>
+    <div class="calendar-container">
+        <iframe 
+            src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688" 
+            frameborder="0" 
+            scrolling="no">
+        </iframe>
+    </div>
 </body>
 </html>
