--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teamsters Local 2024 Calendar</title>
     <style>
-        /* Reset and Body Styling */
+        /* General Reset and Body Styling */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -13,16 +13,17 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            min-height: 100vh;
+            justify-content: start;
+            height: 100vh;
+            overflow-x: hidden;
         }
 
-        /* Title Styling */
+        /* Header Styling */
         header {
             background-color: #003366;
             color: white;
             width: 100%;
-            padding: 15px 0;
+            padding: 15px;
             text-align: center;
             font-size: 1.5em;
             font-weight: bold;
@@ -32,14 +33,19 @@
         /* Calendar Container */
         .calendar-container {
             width: 100%;
-            max-width: 800px; /* For larger screens */
-            height: 90vh;
+            flex-grow: 1; /* Ensures it takes the remaining space */
+            display: flex;
+            justify-content: center;
+            align-items: center;
             padding: 10px;
+            box-sizing: border-box;
         }
 
         iframe {
             width: 100%;
+            max-width: 800px; /* Restricts iframe width on large screens */
             height: 100%;
+            min-height: 500px;
             border: solid 1px #777;
         }
 
@@ -47,6 +53,16 @@
         @media (max-width: 768px) {
             header {
                 font-size: 1.2em;
+                padding: 10px;
+            }
+            iframe {
+                height: 85vh; /* Ensures it uses most of the screen on small devices */
+            }
+        }
+
+        @media (max-width: 480px) {
+            iframe {
+                height: 80vh; /* Adjust for very small screens */
             }
         }
     </style>
