--- a/index.html
+++ b/index.html
@@ -3,78 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teamsters Local 2024 Calendar</title>
-    <style>
-        /* General Reset and Body Styling */
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: start;
-            height: 100vh;
-            overflow-x: hidden;
-        }
-
-        /* Header Styling */
-        header {
-            background-color: #003366;
-            color: white;
-            width: 100%;
-            padding: 15px;
-            text-align: center;
-            font-size: 1.5em;
-            font-weight: bold;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Calendar Container */
-        .calendar-container {
-            width: 100%;
-            flex-grow: 1; /* Ensures it takes the remaining space */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        iframe {
-            width: 100%;
-            max-width: 800px; /* Restricts iframe width on large screens */
-            height: 100%;
-            min-height: 500px;
-            border: solid 1px #777;
-        }
-
-        /* Mobile Responsiveness */
-        @media (max-width: 768px) {
-            header {
-                font-size: 1.2em;
-                padding: 10px;
-            }
-            iframe {
-                height: 85vh; /* Ensures it uses most of the screen on small devices */
-            }
-        }
-
-        @media (max-width: 480px) {
-            iframe {
-                height: 80vh; /* Adjust for very small screens */
-            }
-        }
-    </style>
+    <title>Teamsters Local 2024 Events</title>
 </head>
 <body>
-    <header>Teamsters Local 2024 Calendar</header>
-    <div class="calendar-container">
-        <iframe 
-src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&mode=WEEK&showCalendars=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>"
-            frameborder="0" 
-            scrolling="no">
-        </iframe>
-    </div>
+    <header>
+        <h1>Teamsters Local 2024 Events</h1>
+    </header>
+    <main>
+        <!-- Second Calendar (Priority at the Top) -->
+        <section class="calendar">
+            <h2>Upcoming Events (Agenda View)</h2>
+            <iframe 
+                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&mode=AGENDA&showCalendars=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688" 
+                style="border:solid 1px #777" 
+                width="800" 
+                height="600" 
+                frameborder="0" 
+                scrolling="no">
+            </iframe>
+        </section>
+
+        <!-- First Calendar -->
+        <section class="calendar">
+            <h2>Full Calendar View</h2>
+            <iframe 
+                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688" 
+                style="border:solid 1px #777" 
+                width="800" 
+                height="600" 
+                frameborder="0" 
+                scrolling="no">
+            </iframe>
+        </section>
+    </main>
 </body>
 </html>
