--- a/index.html
+++ b/index.html
@@ -4,35 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teamsters Local 2024 Events</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #003366;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-size: 2em;
+            font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        main {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 10px;
+            background: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            color: #003366;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        iframe {
+            width: 100%;
+            height: 600px;
+            border: solid 1px #777;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Teamsters Local 2024 Events</h1>
+        Teamsters Local 2024 Events
     </header>
     <main>
-        <!-- Second Calendar (Priority at the Top) -->
-        <section class="calendar">
+        <!-- Second Calendar (Agenda View) -->
+        <section>
             <h2>Upcoming Events (Agenda View)</h2>
             <iframe 
-                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&mode=AGENDA&showCalendars=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688" 
-                style="border:solid 1px #777" 
-                width="800" 
-                height="600" 
-                frameborder="0" 
-                scrolling="no">
+                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&mode=AGENDA&showCalendars=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688">
             </iframe>
         </section>
 
         <!-- First Calendar -->
-        <section class="calendar">
+        <section>
             <h2>Full Calendar View</h2>
             <iframe 
-                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688" 
-                style="border:solid 1px #777" 
-                width="800" 
-                height="600" 
-                frameborder="0" 
-                scrolling="no">
+                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688">
             </iframe>
         </section>
     </main>
