--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 </head>
 <body>
     <header>
-        Teamsters Local 2024 Calendar
-        <span>Stay updated with our events and schedules</span>
+        Teamsters Local 2024
     </header>
     <main>
         <!-- First Calendar -->
