--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
         /* Header Styling */
         header {
-            background-color: #003366;
+            background: linear-gradient(135deg, #003366, #0055a5);
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 20px 10px;
             font-size: 2.5em;
             font-weight: bold;
             line-height: 1.2;
@@ -29,6 +29,7 @@
             display: block;
             font-size: 1.2em;
             color: #f4f4f4;
+            margin-top: 5px;
         }
 
         /* Main Content Styling */
@@ -45,11 +46,35 @@
             margin-bottom: 40px;
         }
 
+        h2 {
+            font-size: 1.5em;
+            color: #003366;
+            text-align: center;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
         iframe {
             width: 100%;
             height: 600px;
-            border: solid 1px #777;
+            border: solid 1px #ccc;
             border-radius: 5px;
+            transition: box-shadow 0.3s ease;
+        }
+
+        iframe:hover {
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Footer Styling */
+        footer {
+            text-align: center;
+            padding: 15px;
+            background: #003366;
+            color: white;
+            font-size: 1em;
+            margin-top: 30px;
         }
 
         /* Responsive Styling */
@@ -81,11 +106,13 @@
 </head>
 <body>
     <header>
-        Teamsters Local 2024
+        Teamsters Local 2024 Calendar
+        <span>Stay updated with our events</span>
     </header>
     <main>
         <!-- First Calendar -->
         <section>
+            <h2>Upcoming Events</h2>
             <iframe 
                 src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&mode=AGENDA&showCalendars=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688">
             </iframe>
@@ -93,10 +120,14 @@
 
         <!-- Second Calendar -->
         <section>
+            <h2>Full Calendar</h2>
             <iframe 
                 src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688">
             </iframe>
         </section>
     </main>
+    <footer>
+        © 2025 Teamsters Local 2024. All rights reserved.
+    </footer>
 </body>
 </html>
