--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
 </head>
 <body>
     <header>
-        Teamsters Local 2024 Calendar
-        <span>Stay updated with our events</span>
+        Teamsters Local 2024
     </header>
     <main>
         <!-- First Calendar -->
