--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </head>
 <body>
     <header>
-        Teamsters Local 2024
+        TEAMSTERS LOCAL 2024
     </header>
     <main>
         <!-- First Calendar -->
