--- a/index.html
+++ b/index.html
@@ -124,7 +124,16 @@
                 src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDetroit&showPrint=0&src=YTkyMjE2Y2IwMDM5ZDFlOWM2NjVjOGE0YWVmOTAzNTFlMTRhZmIxMzMzZjJlMGE0NzcyOWI5MTUxZTdjNjBjNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688">
             </iframe>
         </section>
-    </main>
+        
+
+    </    </section>
+
+    <!-- Disclaimer Section -->
+    <section style="font-size: 0.9em; color: #555; background: #eef2f5; padding: 20px; border-radius: 8px; text-align: center;">
+        <strong>Disclaimer:</strong> This website is intended for internal use by stewards of Teamsters Local 2024. The content shared is for union-related coordination and communication under protections granted by the National Labor Relations Act (NLRA). Any unauthorized sharing, distribution, or external use of this material is strictly prohibited and may be considered a breach of union confidentiality and NLRA-protected activity.
+    </section>
+</main>
+main>
     <footer>
         © 2025 Teamsters Local 2024. All rights reserved.
     </footer>
