--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
     </style>
 </head>
 <body>
-    <header>
-        TEAMSTERS LOCAL 2024
-    </header>
+<header>
+    TEAMSTERS LOCAL 2024
+    <span>Stewards Calendar</span>
+</header>
     <main>
         <!-- First Calendar -->
         <section>
